complete/data/corpus/corpus2043453.txt
Question (ID-2043453): Executing Python multi-line statements in the one-line command-line I'm using python -c to execute a one-liner loop, i.e.: 

 $ python -c "for r in range(10): print 'rob'"
 

 this works fine. However, if I import a module before the for loop, I get a syntax error: 

 $ python -c "import sys; for r in range(10): print 'rob'"
 File "&lt;string&gt;", line 1
 import sys; for r in range(10): print 'rob'
    ^
SyntaxError: invalid syntax
 

 Any idea how this can be fixed? 
 Answers (Total-9): #0 you could do 

 echo -e "import sys\nfor r in range(10): print 'rob'" | python
 

 or w/out pipes: 

 python -c "exec(\"import sys\\nfor r in range(10): print 'rob'\")"
 

 or 

 (echo "import sys" ; echo "for r in range(10): print 'rob'") | python
 

 or @ SilentGhost's answer / @Crast's answer 
 #1 The problem is not with the import statement. The problem is that the control flow statements don't work inlined in a python command. Replace that import statement with any other statement and you'll see the same problem. 

 Think about it: python can't possibly inline everything. It uses indentation to group control-flow. 
 #2 this style can be used in makefiles too (and in fact it is used quite often). 

 cat &lt;&lt;EOF | python -
import sys
for r in range(3): print 'rob'
EOF
 

 or 

 cat &lt;&lt;-EOF | python -
 import sys
 for r in range(3): print 'rob'
EOF
 

 in latter case leading tab characters are removed too (and some structured outlook can be achieved) 

 instead of EOF can stand any marker word not appearing in the here document at a beginning of a line (see also here documents in the bash manpage or here ). 
 #3 If your system is Posix.2 compliant it should supply the printf utility: 

 $ printf "print 'zap'\nfor r in range(3): print 'rob'" | python
zap
rob
rob
rob
 
 #4 just use return and type it on the next line: 

 user@host:~$ python -c "import sys
&gt; for r in range(10): print 'rob'"
rob
rob
...
 
 #5 The issue is not actually with the import statement, it's with anything being before the for loop. Or more specifically, anything appearing before an inlined block. 

 For example, these all work: 

 python -c "import sys; print 'rob'"
python -c "import sys; sys.stdout.write('rob\n')"
 

 If import being a statement were an issue, this would work, but it doesn't: 

 python -c "__import__('sys'); for r in range(10): print 'rob'"
 

 For your very basic example, you could rewrite it as this: 

 python -c "import sys; map(lambda x: sys.stdout.write('rob%d\n' % x), range(10))"
 

 However, lambdas can only execute expressions, not statements or multiple statements, so you may still be unable to do the thing you want to do. However, between generator expressions, list comprehension, lambdas, sys.stdout.write, the "map" builtin, and some creative string interpolation, you can do some powerful one-liners. 

 The question is, how far do you want to go, and at what point is it not better to write a small .py file which your makefile executes instead? 
 #6 I'm not really a big Pythoner - but I found this syntax once, forgot where from, so I thought I'd document it: 

 if you use sys.stdout.write instead of print ( the difference being, sys.stdout.write takes arguments as a function, in parenthesis - whereas print doesn't ), then for a one-liner, you can get away with inverting the order of the command and the for , removing the semicolon, and enclosing the command in square brackets, i.e.: 

 python -c "import sys; [sys.stdout.write('rob\n') for r in range(10)]"
 

 Have no idea how this syntax would be called in Python :) 

 Hope this helps, 

 Cheers! 
 #7 single/double quotes and backslash everywhere: 

 $ python -c 'exec("import sys\nfor i in range(10): print \"bob\"")'
 

 Much better: 

 $ python -c '
&gt; import sys
&gt; for i in range(10):
&gt; print "bob"
&gt; '
 
 #8 $ python2.6 -c "import sys; [sys.stdout.write('rob\n') for r in range(10)]" 

 Works fine.
Use "[ ]" to inline your for loop.